Fix option dark mode styling issue on linux

--- a/packages/stateless/styles/index.css
+++ b/packages/stateless/styles/index.css
@@ -69,6 +69,11 @@ input[type='number']::-webkit-outer-spin-button {
   scrollbar-width: none; /* Firefox */
 }
 
+/* Hard code option text color to black to fix issue with dropdowns on linux  */
+option {
+  color: black;
+}
+
 /* COLOR SYSTEM FIGMAS */
 /* https://www.figma.com/file/6M11csIFIi3IwnmDq9ZAB9/%E2%99%A3%EF%B8%8E--Dark-Tokens */
 /* https://www.figma.com/file/k0Qf3UOkEs6lPuezuDbkwN/%E2%99%A3%EF%B8%8E--Light-Tokens */
